--- a/src/app/main/estimate/esrimate/estimate.component.html
+++ b/src/app/main/estimate/esrimate/estimate.component.html
@@ -45,7 +45,7 @@
 
           </mat-tab>
           <mat-tab label="ข้อมูลแผนการดำเนินโครงการ">
-            <app-budget-plan></app-budget-plan>
+            <!-- <app-budget-plan></app-budget-plan> -->
           </mat-tab>
           <mat-tab label="ข้อมูลเอกสารเสนอขอ">
             <app-facesheet></app-facesheet>
