--- a/src/app/main/proposal/proposal-form-approve/proposal-form-approve.component.scss
+++ b/src/app/main/proposal/proposal-form-approve/proposal-form-approve.component.scss
@@ -1,11 +1,12 @@
 .content .mat-tab-label {
     height: 64px;
-}
-
-.mat-tab-body-wrapper {
+  }
+  
+  .mat-tab-body-wrapper {
     height: 100%;
     position: relative;
     overflow: hidden;
     display: flex;
-    transition: height .5s cubic-bezier(.35, 0, .25, 1);
-}
+    transition: height .5s cubic-bezier(.35,0,.25,1);
+  }
+  
