--- a/src/app/main/strategic/list/strategicList.component.html
+++ b/src/app/main/strategic/list/strategicList.component.html
@@ -27,7 +27,7 @@
           class="logo-text h1"
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
         >
-        STRATEGICList
+        ข้อมูลพื้นฐาน
         </span>
       </div>
       <!-- / APP TITLE -->
@@ -47,7 +47,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <h2>{{'STRATEGIC.HELLO' | translate}}</h2>
+        <h2>อยู่ระหว่างดำเนินการ</h2>
       </div>
     </div>
     <!-- /CONTENT CARD -->
