--- a/src/app/main/proposal/components/prop-list/prop-list.component.html
+++ b/src/app/main/proposal/components/prop-list/prop-list.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <ngx-datatable #table class="material fullscreen" [columnMode]="'flex'" [headerHeight]="64" [footerHeight]="64"
       rowHeight="auto" scrollbarH="true" [limit]="10" [rows]="rows">
-      <ngx-datatable-column name="รหัสโครงการ" [flexGrow]="1">
+      <ngx-datatable-column name="รหัสโครงการ" [flexGrow]="2.5">
         <ng-template ngx-datatable-cell-template let-row="row">
           {{ row.budgetcodetmp }}
         </ng-template>
@@ -12,9 +12,9 @@
           {{ row.name }}
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="ระยะเวลา" [flexGrow]="1.5">
+      <ngx-datatable-column name="ปีงบประมาณ" [flexGrow]="1.5">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.timeline }}
+          {{ row.budgetyear }}
         </ng-template>
       </ngx-datatable-column>
       <ngx-datatable-column name="งบประมาณทั้งโครงการ" [flexGrow]="1.5">
@@ -29,20 +29,24 @@
       </ngx-datatable-column>
       <ngx-datatable-column name="สถานะ" [flexGrow]="2">
         <ng-template ngx-datatable-cell-template let-row="row">
-          สถานะ
+          {{ row.status }}
         </ng-template>
       </ngx-datatable-column>
       <ngx-datatable-column [flexGrow]="1">
-        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex">
+        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" >
           <button class="mat-icon-button" aria-label="More" [matMenuTriggerFor]="moreMenu"
             (click)="$event.stopPropagation()">
             <mat-icon class="secondary-text">more_vert</mat-icon>
           </button>
 
           <mat-menu #moreMenu>
-            <button mat-menu-item aria-label="edit" (click)="editProposalData('edit', rowIndex)">
+            <button mat-menu-item aria-label="edit"  (click)="editProposalData('edit', rowIndex)">
               <mat-icon>edit</mat-icon>
               <span>แก้ไขโครงการ</span>
+            </button>
+            <button mat-menu-item aria-label="edit" (click)="editProposalData('send', rowIndex)">
+              <mat-icon>send</mat-icon>
+              <span>ส่งพิจารณา</span>
             </button>
             <button mat-menu-item aria-label="edit" (click)="editProposalData('delete', rowIndex)">
               <mat-icon>delete</mat-icon>
