--- a/src/app/main/proposal/form/proposalForm.component.scss
+++ b/src/app/main/proposal/form/proposalForm.component.scss
@@ -9,3 +9,18 @@
   display: flex;
   transition: height .5s cubic-bezier(.35,0,.25,1);
 }
+.dropzone .frm003 p {
+  font-size: 1.5rem;
+  color: silver;
+}
+.dropzone .frm003 input {
+  display: none;
+}
+
+.dropzone .frm003 mat-icon {
+  color: #2096f3;
+  font-size: 20rem;
+  height: 50%;
+  width:50%;
+  cursor: pointer;
+}
