--- a/src/app/main/proposal/list/proposalList.component.html
+++ b/src/app/main/proposal/list/proposalList.component.html
@@ -13,7 +13,7 @@
           format_list_numbered
         </mat-icon>
         <span class="logo-text h1" [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }">
-          PROPOSALList
+          รายการคำขอตั้งงบประมาณรายจ่ายประจำปี
         </span>
       </div>
       <!-- / APP TITLE -->
@@ -27,11 +27,11 @@
       </div>
       <!-- / SEARCH -->
 
-      <div>
+      <!-- <div>
         <button mat-fab color="accent" (click)="sendApprove()">
           <mat-icon class="icon-position">send</mat-icon>
         </button>
-      </div>
+      </div> -->
 
     </div>
     <!-- / HEADER -->
