--- a/src/app/main/project/form/projectForm.component.html
+++ b/src/app/main/project/form/projectForm.component.html
@@ -46,7 +46,7 @@
       <div class="content">
         <mat-tab-group fxFlex>
           <mat-tab label="PROJECT">
-            <h2>{{'PROJECT.HELLO' | translate}}</h2>
+            <app-project-form-body></app-project-form-body>
           </mat-tab>
           
         </mat-tab-group>
