--- a/src/app/main/project/list/projectList.component.html
+++ b/src/app/main/project/list/projectList.component.html
@@ -27,7 +27,7 @@
           class="logo-text h1"
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
         >
-        PROJECTList
+        รายการขออนุมัติงบประมาณรายจ่ายส่ง สงป
         </span>
       </div>
       <!-- / APP TITLE -->
@@ -47,7 +47,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <h2>{{'PROJECT.HELLO' | translate}}</h2>
+        <app-project-table-list></app-project-table-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
