--- a/src/app/main/allocate/list/allocateList.component.html
+++ b/src/app/main/allocate/list/allocateList.component.html
@@ -27,7 +27,7 @@
           class="logo-text h1"
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
         >
-        ALLOCATEList
+        จัดสรรงบประมาณรายจ่ายประจำปี
         </span>
       </div>
       <!-- / APP TITLE -->
@@ -47,7 +47,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <h2>{{'ALLOCATE.HELLO' | translate}}</h2>
+        <app-alloc-table-list></app-alloc-table-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
