--- a/src/app/main/project/list/projectList.component.html
+++ b/src/app/main/project/list/projectList.component.html
@@ -47,7 +47,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <app-project-table-list></app-project-table-list>
+        <app-project-table-list [rows]="rows"></app-project-table-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
