--- a/src/app/main/manage/list/manageList.component.html
+++ b/src/app/main/manage/list/manageList.component.html
@@ -27,7 +27,7 @@
           class="logo-text h1"
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
         >
-        MANAGEList
+        รายการโครงการ
         </span>
       </div>
       <!-- / APP TITLE -->
@@ -47,7 +47,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <h2>{{'MANAGE.HELLO' | translate}}</h2>
+        <app-manage-table-list></app-manage-table-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
