--- a/src/app/main/transfer/list/transferList.component.html
+++ b/src/app/main/transfer/list/transferList.component.html
@@ -27,7 +27,7 @@
           class="logo-text h1"
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
         >
-        TRANSFERList
+        รายการโอนเปลี่ยนแปลงงบประมาณ
         </span>
       </div>
       <!-- / APP TITLE -->
@@ -47,7 +47,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <h2>{{'TRANSFER.HELLO' | translate}}</h2>
+        <app-transfer-table-list></app-transfer-table-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
